--- a/styles/index.css
+++ b/styles/index.css
@@ -6,13 +6,15 @@
 }
 
 body {
+  margin: 0 auto;
   display: flex;
+  /* flex-wrap: wrap; */
   flex-direction: column;
 
   width: 100%;
 }
 
-header {
+div header {
   margin-top: 40px;
   margin-left: 77px;
   font-family: "Inconsolata", monospace;
@@ -25,30 +27,37 @@ header {
   color: #333333;
 }
 
-section {
+div section {
   margin: 0 auto;
   margin-top: 100px;
   margin-bottom: 150px;
-  width: 1244px;
+  width: 90%;
+  /* margin-left: 77px; */
+  /* max-width: 1244px; */
+  min-width: 560px;
   font-family: "Space Mono", monospace;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
 
-section .left {
+div section .left {
   /* margin-left: 77px; */
 }
-section .left img {
+div section .left img {
   width: 539.22px;
+  margin-left: 77px;
   /* margin-right: 100px; */
 }
 
-section .right {
+div section .right {
   /* margin-right: 119px; */
+  margin-left: 77px;
+  margin-right: 77px;
 }
 
-section .right h1 {
+div section .right h1 {
   width: 586px;
   font-style: normal;
   font-weight: bold;
@@ -62,7 +71,7 @@ section .right h1 {
   color: #333333;
 }
 
-section .right p {
+div section .right p {
   width: 381px;
 
   font-style: normal;
@@ -77,7 +86,7 @@ section .right p {
   color: #4f4f4f;
 }
 
-section .right button {
+div section .right button {
   font-family: "Space Mono", monospace;
   width: 216px;
   height: 68px;
@@ -93,18 +102,18 @@ section .right button {
   text-transform: uppercase;
 }
 
-section .right button:hover {
+div section .right button:hover {
   cursor: pointer;
   opacity: 0.9;
 }
 
-footer {
+div footer {
   font-family: "Montserrat", sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-footer span {
+div footer span {
   margin-bottom: 15px;
 }
