--- a/styles/index.css
+++ b/styles/index.css
@@ -31,7 +31,7 @@ div section {
   margin: 0 auto;
   margin-top: 100px;
   margin-bottom: 150px;
-  width: 90%;
+  /* width: 90%; */
   /* margin-left: 77px; */
   /* max-width: 1244px; */
   min-width: 560px;
@@ -46,19 +46,22 @@ div section .left {
   /* margin-left: 77px; */
 }
 div section .left img {
-  width: 539.22px;
+  width: 80%;
+  max-width: 600px;
   margin-left: 77px;
   /* margin-right: 100px; */
 }
 
 div section .right {
   /* margin-right: 119px; */
+  width: 80%;
+  max-width: 600px;
   margin-left: 77px;
   margin-right: 77px;
 }
 
 div section .right h1 {
-  width: 586px;
+  /* width: 586px; */
   font-style: normal;
   font-weight: bold;
   font-size: 64px;
