--- a/styles/index.css
+++ b/styles/index.css
@@ -8,15 +8,12 @@
 body {
   margin: 0 auto;
   display: flex;
-  /* flex-wrap: wrap; */
   flex-direction: column;
-
-  width: 100%;
 }
 
 div header {
-  margin-top: 40px;
-  margin-left: 77px;
+  padding-top: 20px;
+  margin-left: 5%;
   font-family: "Inconsolata", monospace;
   font-style: normal;
   font-weight: bold;
@@ -28,43 +25,54 @@ div header {
 }
 
 div section {
-  margin: 0 auto;
-  margin-top: 100px;
-  margin-bottom: 150px;
+  /* margin-top: 100px; */
+  /* margin-bottom: 150px; */
   /* width: 90%; */
   /* margin-left: 77px; */
   /* max-width: 1244px; */
-  min-width: 560px;
+  /* min-width: 560px; */
   font-family: "Space Mono", monospace;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 div section .left {
+  width: 375px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   /* margin-left: 77px; */
 }
 div section .left img {
   width: 80%;
-  max-width: 600px;
-  margin-left: 77px;
+  /* max-width: 600px; */
+  /* margin-left: 77px; */
   /* margin-right: 100px; */
 }
 
 div section .right {
+  width: 375px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
   /* margin-right: 119px; */
-  width: 80%;
-  max-width: 600px;
-  margin-left: 77px;
-  margin-right: 77px;
+  /* width: 80%; */
+  /* max-width: 600px; */
+  /* margin-left: 77px; */
+  /* margin-right: 77px; */
 }
 
 div section .right h1 {
   /* width: 586px; */
+
+  text-align: left;
   font-style: normal;
   font-weight: bold;
-  font-size: 64px;
+  font-size: 60px;
   line-height: 95px;
   letter-spacing: -0.035em;
   margin-bottom: 36px;
@@ -75,8 +83,8 @@ div section .right h1 {
 }
 
 div section .right p {
-  width: 381px;
-
+  margin: 0px 10px;
+  /* text-align: justify; */
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
