--- a/styles/index.css
+++ b/styles/index.css
@@ -28,7 +28,7 @@ div header {
 @media (min-width: 600px) {
   div section {
     margin-top: 15vh;
-    width: 100vw;
+    width: 98vw;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -47,6 +47,7 @@ div header {
     line-height: 95px;
   }
   div section .right p {
+    /* max-width: 300px; */
     font-size: 24px;
     line-height: 36px;
   }
